--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: IS445 - Data Viz - BOG-BOU
-email: mjturk@illinois.edu
+title: IS445 - Data Viz - AOG/AOU
+email: jnaiman@illinois.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the course website for IS445-BOG-BOU in Fall 2020
-baseurl: "/fall2020-BOG-BOU" # the subpath of your site, e.g. /blog
+  This is the course website for IS445-AOG-AOU in Spring 2021
+baseurl: "/is445_spring2021" # the subpath of your site, e.g. /blog
 url: "https://uiuc-ischool-dataviz.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  matthewturk
+github_username:  jnaiman
 branch: master
 
 # Build settings
